# billgen

./: .gitignore  README.md  fuel_guide.md  generate_all_templates.py  generate_driver_bills.py  generate_fuel_bills.py  generate_sample.py  pyproject.toml
guide/: driver_guide.md  fuel_guide.md  utility_guide.md
input/driver/: config.json  source.json
input/fuel/: config.json  prompt.md  source.json
src/: __init__.py  generator.py  renderer.py
src/billgen/: __init__.py  generator.py  renderer.py
src/billgen/models/: __init__.py  base.py  driver.py  fuel.py
src/billgen/utils/: __init__.py  compress_images.py
src/models/: __init__.py  base.py  driver.py  fuel.py
src/scripts/: generate_all_templates.py  generate_driver_bills.py  generate_fuel_bills.py  generate_sample.py
src/util/: compress_pdf.py  images_to_pdf.py  merge_pdf.py
tests/: extract_logos.py  inspect_layout.py  inspect_templates.py  test_models.py
