[project]
name = "bill-gen"
version = "0.1.0"
description = "A modular bill generator supporting multiple bill types and PDF templates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.1.1",
    "pillow-heif>=1.3.0",
    "pydantic>=2.0",
    "pypdf>=6.7.5",
    "reportlab>=4.4.10",
]
